# ws-scrcpy-web

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PRIVACY.md  README.md  RELEASE_NOTES.md  SECURITY.md  THIRD-PARTY-NOTICES.md  biome.json  config.example.json  package-lock.json  package.json  start.cmd  start.sh  tsconfig.json  vitest.config.ts  vitest.setup.ts
.github/: dependabot.yml
.github/rulesets/: protect-main.json
.github/state/: node-pty-prebuilds-state.json
.github/workflows/: auto-release.yml  ci.yml  codeql.yml  dependabot-auto-merge.yml  docker-publish.yml  docker-publish.yml.disabled  node-pty-prebuilds.yml  release.yml  scorecard.yml
common/: Cargo.toml
common/src/: config.rs  control_marker.rs  lib.rs  log.rs  session.rs  tray.rs
docs/: PROGRAMDATA-MIGRATION.md  RELEASING.md  TECHNICAL_GUIDE.md
docs/audits/: 2026-05-25-local-deps-compliance.md
docs/plans/: 2026-04-10-sp1-dependency-modernization.md  2026-04-10-sp2-scrcpy-v3-protocol.md  2026-04-11-sp3-1-buffer-to-uint8array.md  2026-04-11-sp3-2-streamreceiver-cleanup.md  2026-04-16-device-labels.md  2026-04-26-sp3-velopack-installer.md  2026-06-01-linux-appimage-self-update.md  2026-06-01-linux-service-mode-fix.md  2026-06-01-linux-update-apply-handoff.md  2026-06-02-linux-service-mode-beta31-fixes.md  2026-06-02-linux-service-mode-phase2-update-apply.md  2026-06-05-machine-wide-opt-install-phase1-foundation.md  2026-06-05-machine-wide-opt-install-phases2-3.md  2026-06-08-app-section-redesign-windows-uninstall.md  2026-06-08-linux-app-section-ux.md  2026-06-08-windows-uninstall-wipe-self-deletion.md  2026-06-09-system-service-install-handoff-fix.md  2026-06-10-production-log-dedup.md  2026-06-11-beta61-system-service-fixes.md  2026-06-11-sqlite-persistence-and-auth-phase1-foundation.md  2026-06-11-sqlite-persistence-and-auth-phase2-device-store.md  2026-06-11-sqlite-persistence-and-auth-phase3-settings-migration.md  2026-06-11-sqlite-persistence-and-auth-phase4-auth.md  2026-06-12-system-service-install-redesign.md  2026-06-27-smoke-doc-consolidation.md  sp3-p3-contracts.md  sp3-p4a-contracts.md  sp3-p4b-contracts.md  sp3-p5-contracts.md  sp3-p6-contracts.md
docs/smoke-tests/: capture-logs.ps1  capture-logs.sh  clear-install.sh  smoke-checklist.md  smoke-full.md  smoke-runbook.md  smoke-test.md  v0.1.30-beta.37-linux-service-mode.md  v0.1.30-beta.39-stop-server-exit-and-residuals.md  v0.1.30-beta.43-full.md  v0.1.30-beta.44-full.md  v0.1.30-beta.44-runbook.md  v0.1.30-beta.48-checklist.md
docs/specs/: 2026-04-26-sp3-velopack-installer.md  2026-06-01-linux-appimage-self-update-design.md  2026-06-01-linux-service-mode-beta31-fixes-design.md  2026-06-01-linux-service-mode-fix-and-update-design.md  2026-06-01-linux-update-apply-handoff-design.md  2026-06-02-stop-server-exit-and-residuals-design.md  2026-06-02-system-scope-service-paths-fix-design.md  2026-06-05-machine-wide-opt-install-design.md  2026-06-05-machine-wide-opt-install-phases2-3-design.md  2026-06-07-linux-user-service-execstart-fix-design.md  2026-06-07-linux-user-service-handoff-design.md  2026-06-08-app-section-redesign-windows-uninstall-design.md  2026-06-08-linux-app-section-ux-design.md  2026-06-08-windows-uninstall-wipe-self-deletion-design.md  2026-06-09-sp4-docker-image-design.md  2026-06-10-production-log-dedup-design.md  2026-06-11-beta61-system-service-fixes-design.md  2026-06-11-sqlite-persistence-and-auth-design.md  2026-06-12-system-service-install-redesign-design.md  2026-06-12-system-state-var-lib-design.md  2026-06-27-smoke-doc-consolidation-design.md
launcher/: Cargo.toml  build.rs
launcher/assets/: operation-server-page.html  upgrade-server-page.html
launcher/src/: deferred_servy_restart.rs  elevated_runner.rs  hooks.rs  install_acl.rs  linux_app_uninstall.rs  linux_apply.rs  linux_service.rs  log.rs  main.rs  migrate.rs  operation_server.rs  paths.rs  post_stop_handler.rs  single_instance.rs  spawn.rs  supervisor.rs  system_service_cli.rs  tray.rs  tray_supervisor.rs  uac_requester.rs  unzip_handler.rs  upgrade_server.rs  user_session_spawn.rs  win_util.rs  windows_app_uninstall.rs
launcher/tests/: print_active_session.rs
public/: embed.html  index.html
public/help/: subnets.html
scripts/: build-types.js  bump-version.mjs  compute-matrix-versions.mjs  dev-supervisor.mjs  dump-cnxn.js  extract-changelog.mjs  fetch-node.mjs  fetch-prebuilts.mjs  fetch-servy.mjs  package-linux.mjs  posix-tar.mjs  posix-tar.test.mjs  stage-publish.mjs  stage-seed-node-pty.mjs  stage-seed-scrcpy-server.mjs  swap-appimage-runtime.mjs  swap-appimage-runtime.test.mjs  test-probe-single.js  test-update-flow.ps1
scripts/__tests__/: bump-version.test.mjs  dev-supervisor.test.mjs  extract-changelog.test.mjs  fetch-prebuilts.test.mjs  package-linux.test.mjs
src/app/: BinaryReader.test.ts  BinaryReader.ts  ScrcpyDemuxer.ts  Util.escapeUdid.test.ts  Util.ts  VideoSettings.ts  htmlEscape.test.ts  htmlEscape.ts  index.ts
src/common/: AdbProtocol.ts  AudioDefaults.ts  ChannelId.ts  ConfigEvents.ts  ControlCenterCommand.ts  DependencyTypes.ts  ScanMessage.ts  ScrcpyCodec.ts  ServiceEvents.ts  StreamUrlParams.ts  SubnetParser.ts  UpdateEvents.ts
src/server/: AdbClient.ts  AdbDaemonManager.ts  Config.ts  DependencyDefinitions.ts  DependencyManager.ts  DeviceLabelStore.ts  DeviceProbe.ts  FrameReader.ts  InstallScope.ts  Logger.ts  NodePtyResolver.ts  PortPicker.ts  ScrcpyConnection.ts  ScrcpyOptions.ts  StaticFileServer.ts  UpdateService.ts  Utils.ts  appVersion.ts  downloadToFile.ts  ensureScrcpyServerPushed.ts  index.ts  legacyDeviceLabels.ts  libcDetect.ts  linuxUpdateAssets.ts  openBrowser.ts  scrcpyEncoderList.ts  scrcpyOptionsFromQuery.test.ts  scrcpyOptionsFromQuery.ts  scrcpyServerVersion.ts  shutdownHelpers.ts  verifySha256.ts
src/style/: app.css  dependencies.css  devicelist.css  dialog.css  home.css  listfiles.css  modal.css  morebox.css  server-reachability.css  ws-scrcpy.css
src/types/: Configuration.d.ts  ParamsBase.ts  (+5 more)
tray/: Cargo.toml  build.rs
tray/src/: main.rs
webpack/: ws-scrcpy-web.common.ts
(+374 files in other folders)
