[workspace]
resolver = "2"
members = ["common", "launcher", "tray"]

[workspace.package]
version = "0.1.23-beta.15"
edition = "2021"
authors = ["ws-scrcpy-web contributors"]
license = "GPL-3.0-or-later"
repository = "https://github.com/bilbospocketses/ws-scrcpy-web"

[workspace.dependencies]
anyhow = "1.0"
ctrlc = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.10", default-features = false, features = ["tls"] }
velopack = "0.0"
winresource = "0.1"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Environment",
    "Win32_System_JobObjects",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_RemoteDesktop",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
