[package]
name = "ws-scrcpy-web-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
png = "0.18"
serde.workspace = true
serde_json.workspace = true
tray-icon.workspace = true
windows.workspace = true

[dev-dependencies]
tempfile = "3.10"
