[package]
name = "ws-scrcpy-web-launcher"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ws-scrcpy-web-launcher"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
common = { path = "../common", package = "ws-scrcpy-web-common" }
ctrlc.workspace = true
serde.workspace = true
serde_json.workspace = true
velopack.workspace = true
windows.workspace = true
zip.workspace = true

[build-dependencies]
winresource.workspace = true

[dev-dependencies]
tempfile = "3.10"
