[package]
name = "ws-scrcpy-web-tray"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ws-scrcpy-web-tray"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
common = { path = "../common", package = "ws-scrcpy-web-common" }
ureq.workspace = true
windows.workspace = true
